--- a/Make3DProjectUI/Views/Article/Designaler.cshtml
+++ b/Make3DProjectUI/Views/Article/Designaler.cshtml
@@ -44,7 +44,7 @@
     </dl>
     
     <form asp-action="Designaler">
-        <input type="submit" value="Confirmer" class="btn btn-success" /> |
-        <a asp-action="Index">Annuler</a>
+        <input type="submit" value="Confirmer" class="btn btn-warning" /> |
+        <a asp-action="Index" class="btn btn-primary">Annuler</a>
     </form>
 </div>
