--- a/Make3DProjectUI/Views/Article/Bloquer.cshtml
+++ b/Make3DProjectUI/Views/Article/Bloquer.cshtml
@@ -53,8 +53,8 @@
                 <span asp-validation-for="Motivation" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Confirmer" class="btn btn-primary" />
-                <a asp-action="Index">Annuler</a>
+                <input type="submit" value="Confirmer" class="btn btn-warning" />
+                <a asp-action="Index"class="btn btn-primary">Annuler</a>
             </div>
         </form>
     </div>
